--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.8"   # To get importlib.metadata working correctly
 dependencies = [
     "cellpose>=3.1.1.1",
     "matplotlib>=3.10.1",
@@ -29,8 +29,9 @@ dependencies = [
     "scipy>=1.15.2",
     "tifffile>=2025.3.30",
     "tqdm>=4.67.1",
-    "customtkinter>=5.2.2",
-    "pyshortcuts>=1.9.5"
+    "pyshortcuts>=1.9.5",
+    "PyQt6>=6.9.0",
+    "pandas>=2.2.3"
 ]
 
 [project.urls]
