--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 [project]
 
 name = "numbers_and_brightness"
-version = "0.1.6"
+version = "0.1.7"
 description = "Numbers and brightness analysis for microscopic image analysis implemented in python."
 readme = "README.md"
 authors = [
@@ -22,7 +22,7 @@ classifiers = [
 ]
 requires-python = ">=3.8"   # To get importlib.metadata working correctly
 dependencies = [
-    "cellpose>=3.1.1.1",
+    "cellpose>=3.1.1.2",    # Last version before Cellpose-SAM
     "matplotlib>=3.10.1",
     "numpy>=2.0.2",
     "opencv-python>=4.11.0.86",
@@ -47,4 +47,4 @@ where = ["."]
 numbers_and_brightness = ["_gui_components/*.ico", "_gui_components/*.png"]
 
 [project.scripts]
-numbers_and_brightness = "numbers_and_brightness.cli:main"
+numbers_and_brightness = "numbers_and_brightness.__main__:main"
