--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 [project]
 
 name = "numbers_and_brightness"
-version = "0.1.7"
+version = "0.1.11"
 description = "Numbers and brightness analysis for microscopic image analysis implemented in python."
 readme = "README.md"
 authors = [
@@ -22,7 +22,7 @@ classifiers = [
 ]
 requires-python = ">=3.8"   # To get importlib.metadata working correctly
 dependencies = [
-    "cellpose>=3.1.1.2",    # Last version before Cellpose-SAM
+    "cellpose[gui]==3.1.1.2",    # Last version before Cellpose-SAM
     "matplotlib>=3.10.1",
     "numpy>=2.0.2",
     "opencv-python>=4.11.0.86",
